app/static/main.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    background: #f5f5f5;
}

.siteHeader {
    padding: 0;
}

.btn-outline-light {
    border: none;
}

.card-bg {
    background-color: rgb(63, 64, 65);
}

footer {
    font-size: 0.9rem;
}
.form-control{
    background-color: rgb(49, 49, 49);
    color:#b8b8b8
}

.form-control::placeholder{
    color: rgb(131, 131, 131);
}
.list-group-item {
    border: none;
}

.legend {
    padding: 15px;
    background: #1e1e1e;
    border-radius: 10px;
    color: #fff;
    max-height: 300px;
    overflow-y: auto;
}

.legend h3 {
    margin-bottom: 10px;
    font-size: 18px;
    color: #ccc;
}

.legend-item {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 6px 8px;
    border-bottom: 1px solid #333;
    font-size: 14px;
}

.legend-item:last-child {
    border-bottom: none;
}

.legend-color {
    width: 12px;
    height: 12px;
    border-radius: 3px;
    margin-right: 10px;
}

.legend-name {
    flex: 1;
    font-size: 14px;
}

.legend-time {
    font-size: 13px;
    color: #aaa;
}

.legend-item.active {
    background-color: rgba(255, 255, 255, 0.08);
    border-radius: 5px;
}

.legend-item.active .legend-name::after {
    content: " • Running";
    font-size: 12px;
    color: #aaa;
}

.legend::-webkit-scrollbar {
    width: 6px;
}

.legend::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 10px;
}

.legend::-webkit-scrollbar-thumb:hover {
    background-color: rgba(255, 255, 255, 0.6);
}

.legend {
    scrollbar-width: thin;
    scrollbar-color: #888 transparent;
}

